<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimCard Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="phoneNum">Phone number</string>
    <string name="simNum">SIM Serial Number</string>
    <string name="simState">SIM State</string>
    <string name="simCountryISO">ISO Country code</string>
    <string name="simCountry">SIM Country</string>
    <string name="simOpCode">SIM Operator code</string>
    <string name="simOpName">SIM Operator</string>
    <string name="simIMSI">SIM IMSI</string>
    <string name="networkType">Network Type</string>
    <string name="phoneType">Phone Type</string>
    <string name="networkRoaming">Active Roaming</string>
    <string name="networkCountrISO">Network country ISO</string>
    <string name="networkOperator">Network Operator</string>
    <string name="networkState">Network state</string>
    <string name="networkSelectionMode">Network Selection Mode</string>
    <string name="deviceId">Device id (IMEI/MEID/ESN)</string>
    <string name="voicemailNumber">Voice mail number</string>
    <string name="defaultText">No data</string>
    <string name="networkifo">Telephony network info</string>
    <string name="moreInfo">More info</string>
    <string name="deviceSoftwareVer">IMEI SV</string>
    <string name="menu_select">Multi Select</string>
    <string name="menu_imexport">Import/Export</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add contact</string>
    <string name="menu_delall">Delete all</string>
    <string name="add_dlg_name">Name</string>
    <string name="add_dlg_number">Number</string>
    <string name="add_dlg_btn_OK">Add contact</string>
    <string name="ctxDelete">Delete</string>
    <string name="ctxModify">Modify</string>
    <string name="edit_dlg_name">New name</string>
    <string name="edit_dlg_number">New number</string>
    <string name="edit_dlg_btn_OK">Save changes</string>
    <string name="strOk">OK</string>
    <string name="strCancel">Cancel</string>
    <string name="addContact_title">Add contact</string>
    <string name="deleteContact_confirm">Are you sure to delete contact </string>
    <string name="deleteAllContact_confirm">Are you sure to delete all contacts?</string>
    <string name="deleteAllContact_title">Dangerous</string>
    <string name="deleteAllContact_success">contacts deleted</string>
    <string name="deleteContact_failed">Cannot delete contact</string>
    <string name="deleteContact_completed">Delete completed</string>
    <string name="deleteContact_title">Delete contact</string>
    <string name="addContact_failed">Cannot add contact</string>
    <string name="addContact_success">Add contact successfully</string>
    <string name="strContactExisted">Contact name already exist</string>
    <string name="updateContact_failed">Cannot update contact</string>
    <string name="updateContact_success">Update contact successfully</string>
    <string name="updateContact_title">Edit contact</string>
    <string name="tabContact_title">Contact</string>
    <string name="btnSelectAll">Select all</string>
    <string name="btnSelectNone">Select none</string>
    <string name="btnDelSelected">Delete selected</string>
    <string name="search_hint">Search…</string>
    <string name="strExportWaiting">Exporting&#8230;</string>
    <string name="strNotImplemented">Not implemented yet :)</string>
    <string name="strProcessing">Processing…</string>
    <string name="strExportFailed_locked">You must mount your SD Card, or make your SD Card to be writable.</string>
    <string name="strNothingToImport">Found nothing to import in your SD Card.\nIf your SD Card is unmounted, please mount your SD Card</string>
    <string name="strContentDescription"></string>
    <string name="strVersionName">Version 2.0</string>
    <string name="activityLable_About">About</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="about_email_to_dev">Email to developer</string>
    <string name="about_go_back">OK, go back</string>
    <string name="about_share">Share to your friends</string>
    <string name="about_rate">Rate this app on Store</string>
    <string name="about_you_can">You can</string>
    <string name="strOpenPSConfirm_title">Rating</string>
    <string name="strOpenPSConfirm">Open Google Play Store?</string>
    <string name="about_click_ad">or click ads to helps developers :)</string>
    <string name="welcome_title">Thanks!</string>
    <string name="welcome_msg">Thank you for using this app.</string>

</resources>