<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/phoneType"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtPhoneType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/phoneNum"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtPhoneNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/simNum"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtSimNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/simOpName"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtOpName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/simCountry"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtSimCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/simIMSI"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtSimIMSI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/networkifo"
            android:textColor="#000"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/networkType"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtNetworkType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/networkRoaming"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtNetworkRoaming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/networkOperator"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtNetworkOperator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/networkState"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtNetworkState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/networkSelectionMode"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtNetworkSelectionMode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/voicemailNumber"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtVoicemailNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/moreInfo"
            android:textColor="#000"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:paddingRight="10dp"
                android:text="@string/deviceId"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtDeviceId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="11" >

            <TextView
                style="@style/LightTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="5"
                android:text="@string/deviceSoftwareVer"
                android:textColor="#000" />

            <TextView
                android:id="@+id/txtDeviceSoftwareVer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:text="@string/defaultText"
                android:textColor="#000"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_id" />
    </LinearLayout>

</ScrollView>